--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".baseline.SigninActivity">
+        <activity android:name=".baseline.Activity.SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".baseline.MainActivity"/>
-        <activity android:name=".baseline.StoreActivity"/>
+        <activity android:name=".baseline.Activity.MainActivity"/>
+        <activity android:name=".baseline.Activity.StoreActivity"/>
+        <activity android:name=".baseline.Activity.SignupActivity"/>
     </application>
 
 </manifest>
