--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".baseline.Activity.SigninActivity">
+        <activity android:name=".Activity.SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".Main.MainActivity"/>
         <activity android:name=".Store.StoreActivity"/>
-        <activity android:name=".baseline.Activity.SignupActivity"/>
+        <activity android:name=".Activity.SignupActivity"/>
     </application>
 
 </manifest>
