todo 생성 동작 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ToDo.ToDoCreateActivity"/>
+        <activity android:name=".ToDo.ToDoCreateActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".baseline.MainActivity"/>
         <activity android:name=".baseline.StoreActivity"/>
     </application>
