--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".Main.MainActivity"/>
         <activity android:name=".Store.StoreActivity"/>
         <activity android:name=".baseline.baseline.Activity.SignupActivity"/>
+        <activity android:name=".Ideas.IdeasViewDetailActivity"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
