MVP 패턴 적용, 파일 이름 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-        <activity android:name=".ToDo.ToDoCreateActivity"
+
+        <activity android:name=".ToDo.TodoCreate.CreateTodoActivity"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".baseline.MainActivity"/>
-        <activity android:name=".baseline.StoreActivity"/>
-=======
+        <activity android:name=".baseline.baseline.Activity.SignupActivity"/>
+
         <activity android:name=".Main.MainActivity"/>
         <activity android:name=".Store.StoreActivity"/>
-        <activity android:name=".baseline.baseline.Activity.SignupActivity"/>
->>>>>>> master
+
     </application>
 
 </manifest>
