--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main.MainActivity"/>
-        <activity android:name=".Store.StoreActivity"/>
-        <activity android:name=".baseline.baseline.Activity.SignupActivity"/>
-        <activity android:name=".Ideas.IdeasViewDetailActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".Main.MainActivity" />
+        <activity android:name=".Store.StoreActivity" />
+        <activity android:name=".baseline.baseline.Activity.SignupActivity" />
+        <activity
+            android:name=".Ideas.IdeasViewDetailActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".LeaderBoard.LeaderBoardActivity"></activity>
     </application>
 
 </manifest>
