--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".UI.Main.MainActivity"/>
         <activity android:name=".UI.Store.StoreActivity"/>
+        <activity android:name=".Mirror.MirrorActivity"/>
         <activity android:name=".UI.Signup.SignupActivity"/>
         <activity android:name=".UI.Ideas.IdeasViewDetailActivity"
             android:windowSoftInputMode="adjustPan"/>
